--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "live-server": "git+https://github.com/tapio/live-server.git#ad22544",
     "serve": "^14.2.1"
+  },
+  "dependencies": {
+    "effector": "^23.2.2"
   }
 }
