--- a/package.json
+++ b/package.json
@@ -1,19 +1,39 @@
 {
-  "name": "WebGPU",
-  "version": "1.0.0",
-  "main": "index.js",
-  "repository": "git@github.com:gormonn/WebGPU.git",
-  "author": "Dmitriy Aleksandrovich Chernukho <gormonn@redcollar.ru>",
-  "license": "MIT",
-  "scripts": {
-    "dev": "serve ./",
-    "dev2": "yarn live-server"
-  },
-  "devDependencies": {
-    "live-server": "git+https://github.com/tapio/live-server.git#ad22544",
-    "serve": "^14.2.1"
-  },
-  "dependencies": {
-    "effector": "^23.2.2"
-  }
+	"name": "svelte",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
+		"test": "vitest",
+		"lint": "prettier --check . && eslint .",
+		"format": "prettier --write ."
+	},
+	"devDependencies": {
+		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@types/eslint": "^8.56.7",
+		"autoprefixer": "^10.4.19",
+		"eslint": "^9.0.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-svelte": "^2.36.0",
+		"flowbite": "^2.4.1",
+		"flowbite-svelte": "^0.46.13",
+		"flowbite-svelte-icons": "^1.6.1",
+		"globals": "^15.0.0",
+		"postcss": "^8.4.39",
+		"prettier": "^3.1.1",
+		"prettier-plugin-svelte": "^3.1.2",
+		"svelte": "^4.2.7",
+		"svelte-check": "^3.6.0",
+		"tailwindcss": "^3.4.4",
+		"typescript": "^5.0.0",
+		"vite": "^5.0.3",
+		"vitest": "^1.2.0"
+	},
+	"type": "module"
 }
